Fix kpart window half shown

BUG: 311887